// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WordOccurrences renders WordOccurrences as list items 1`] = `
Array [
  <p>
    I'm a before list paragraph
  </p>,
  <ul
    aria-label="Prominent words"
    className="yoast-data-model"
  >
    <li
      style={
        Object {
          "--yoast-width": "100%",
        }
      }
    >
      reviewing
      <span>
        13
      </span>
      <span
        className="screen-reader-text"
      >
        13 occurrences
      </span>
    </li>
    <li
      style={
        Object {
          "--yoast-width": "61.53846153846154%",
        }
      }
    >
      code
      <span>
        8
      </span>
      <span
        className="screen-reader-text"
      >
        8 occurrences
      </span>
    </li>
    <li
      style={
        Object {
          "--yoast-width": "46.15384615384615%",
        }
      }
    >
      fun
      <span>
        6
      </span>
      <span
        className="screen-reader-text"
      >
        6 occurrences
      </span>
    </li>
  </ul>,
  <p>
    I'm an after list paragraph
  </p>,
]
`;

exports[`WordOccurrences renders correctly without before and after elements 1`] = `
<ul
  aria-label="Prominent words"
  className="yoast-data-model"
>
  <li
    style={
      Object {
        "--yoast-width": "100%",
      }
    }
  >
    reviewing
    <span>
      13
    </span>
    <span
      className="screen-reader-text"
    >
      13 occurrences
    </span>
  </li>
  <li
    style={
      Object {
        "--yoast-width": "61.53846153846154%",
      }
    }
  >
    code
    <span>
      8
    </span>
    <span
      className="screen-reader-text"
    >
      8 occurrences
    </span>
  </li>
  <li
    style={
      Object {
        "--yoast-width": "46.15384615384615%",
      }
    }
  >
    fun
    <span>
      6
    </span>
    <span
      className="screen-reader-text"
    >
      6 occurrences
    </span>
  </li>
</ul>
`;

exports[`WordOccurrences renders correctly without items 1`] = `
Array [
  <p>
    I'm a before list paragraph
  </p>,
  <ul
    aria-label="Prominent words"
    className="yoast-data-model"
  />,
  <p>
    I'm an after list paragraph
  </p>,
]
`;

exports[`WordOccurrences renders correctly without words and without before and after elements 1`] = `
<ul
  aria-label="Prominent words"
  className="yoast-data-model"
/>
`;
